--- a/front/index.html
+++ b/front/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>quick-qa-stack-it</title>
+    <title>Stack It</title>
 
-    <meta property="og:title" content="quick-qa-stack-it" />
+    <meta property="og:title" content="Stack It" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
